--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <script src="./etch-a-sketch.js" defer></script>
 </head>
 <body>
-    <h1>Etch-A-Sketch</h1>
+    <div id="controls">
+        <button id="new-grid">New Grid</button>
+    </div>
+    <div id="container"></div>
 </body>
 </html>
